--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,26 +9,26 @@ html
     .navbar.navbar-fixed-top
       .navbar-inner
         .container
-          a.btn.btn-navbar
+          a.btn.btn-navbar(data-toggle="collapse" data-target=".nav-collapse")
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.brand(href="/") Microblog
+          a.brand(href="/") Myblog
           .nav-collapse
             ul.nav
               li.active
                 a(href="/") 首頁
               if loginStatus
                 li
-                  a(href="/login")登出
+                  a(href="/logout")登出
               else
                 li
                   a(href="/login")登入
                 li
-                  a(href="/login")註冊
+                  a(href="/reg")註冊
     #container.container
-    block content
+      block content
     hr
     footer
       p
-        a(href="") 2016
+        p test 2017 01
